Starting to add everything to latex template

--- a/20230507_dissertation.bib
+++ b/20230507_dissertation.bib
@@ -48,12 +48,11 @@
   file     = {:/home/alexander/current/mbela/lit/language_assessment/ETS/ETS (2005) TOEFL iBT data summary - num of examinees.pdf:PDF},
 }
 
-@InProceedings{blodgett2020,
-  author   = {Blodgett, Su and Barocas, Solon and Daumé, Hal and Wallach, Hanna},
-  title    = {Language (Technology) is Power: A Critical Survey of "Bias" in NLP},
-  year     = {2020},
-  abstract = {We survey 146 papers analyzing "bias" in NLP systems, finding that their motivations are often vague, inconsistent, and lacking in normative reasoning, despite the fact that analyzing "bias" is an inherently normative process. We further find that these papers' proposed quantitative techniques for measuring or mitigating "bias" are poorly matched to their motivations and do not engage with the relevant literature outside of NLP. Based on these findings, we describe the beginnings of a path forward by proposing three recommendations that should guide work analyzing "bias" in NLP systems. These recommendations rest on a greater recognition of the relationships between language and social hierarchies, encouraging researchers and practitioners to articulate their conceptualizations of "bias"-i.e., what kinds of system behaviors are harmful, in what ways, to whom, and why, as well as the normative reasoning underlying these statements-and to center work around the lived experiences of members of communities affected by NLP systems, while interrogating and reimagining the power relations between technologists and such communities.},
-  file     = {:/home/alexander/current/mbela/20221117_WER/lit/bias/Blodgett et al. (2020) Critical survey of bias in NLP.pdf:PDF},
+@Article{blodgett2020,
+  author  = {Blodgett, Su Lin and Barocas, Solon and Daum{\'e} III, Hal and Wallach, Hanna},
+  journal = {arXiv preprint arXiv:2005.14050},
+  title   = {Language (technology) is power: A critical survey of" bias" in nlp},
+  year    = {2020},
 }
 
 @InProceedings{wang2021automated,
@@ -74,17 +73,6 @@
   pages     = {231--252},
   volume    = {30},
   publisher = {Sage Publications Sage UK: London, England},
-}
-
-@Article{lindemann2013,
-  author    = {Lindemann, Stephanie and Subtirelu, Nicholas},
-  journal   = {Language Learning},
-  title     = {Reliably biased: The role of listener expectation in the perception of second language speech},
-  year      = {2013},
-  number    = {3},
-  pages     = {567--594},
-  volume    = {63},
-  publisher = {Wiley Online Library},
 }
 
 @Article{kang2021social,
@@ -187,7 +175,7 @@
 }
 
 @Book{ccsso2012framework,
-  author    = {Council of Chief State School Officers},
+  author    = {{Council of Chief State School Officers}},
   publisher = {ERIC Clearinghouse},
   title     = {Framework for English language proficiency development standards corresponding to the Common Core State Standards and the Next Generation Science Standards},
   year      = {2012},
@@ -425,6 +413,277 @@
   year       = {2020},
   pages      = {38--45},
   shorttitle = {Transformers},
+}
+
+@Article{essa2015,
+  author  = {{Every Student Succeeds Act}},
+  journal = {Pubic Law},
+  title   = {Every student succeeds act (ESSA)},
+  year    = {2015},
+  pages   = {114--95},
+}
+
+@Article{irwin2021report,
+  author    = {Irwin, V{\'e}ronique and Zhang, Jijun and Wang, Xiaolei and Hein, Sarah and Wang, Ke and Roberts, Ashley and York, Christina and Barmer, Amy and Bullock Mann, Farrah and Dilig, Rita and others},
+  journal   = {National Center for Education Statistics},
+  title     = {Report on the Condition of Education 2021. NCES 2021-144.},
+  year      = {2021},
+  publisher = {ERIC},
+}
+
+@Article{evanini2017approaches,
+  author    = {Evanini, Keelan and Hauck, Maurice Cogan and Hakuta, Kenji},
+  journal   = {ETS Research Report Series},
+  title     = {Approaches to automated scoring of speaking for K--12 English language proficiency assessments},
+  year      = {2017},
+  number    = {1},
+  pages     = {1--11},
+  volume    = {2017},
+  publisher = {Wiley Online Library},
+}
+
+@Article{saal1980,
+  author    = {Saal, Frank E and Downey, Ronald G and Lahey, Mary A},
+  journal   = {Psychological bulletin},
+  title     = {Rating the ratings: Assessing the psychometric quality of rating data.},
+  year      = {1980},
+  number    = {2},
+  pages     = {413},
+  volume    = {88},
+  publisher = {American Psychological Association},
+}
+
+@Article{engelhard1994examining,
+  author    = {Engelhard, George},
+  journal   = {Journal of educational measurement},
+  title     = {Examining rater errors in the assessment of written composition with a many-faceted Rasch model},
+  year      = {1994},
+  number    = {2},
+  pages     = {93--112},
+  volume    = {31},
+  publisher = {Wiley Online Library},
+}
+
+@Article{bejar2011validity,
+  author    = {Bejar, Isaac I},
+  journal   = {Assessment in Education: Principles, Policy \& Practice},
+  title     = {A validity-based approach to quality control and assurance of automated scoring},
+  year      = {2011},
+  number    = {3},
+  pages     = {319--341},
+  volume    = {18},
+  publisher = {Taylor \& Francis},
+}
+
+@Article{zhao2018gender,
+  author  = {Zhao, Jieyu and Wang, Tianlu and Yatskar, Mark and Ordonez, Vicente and Chang, Kai-Wei},
+  journal = {arXiv preprint arXiv:1804.06876},
+  title   = {Gender bias in coreference resolution: Evaluation and debiasing methods},
+  year    = {2018},
+}
+
+@Article{greenwald2006implicit,
+  author    = {Greenwald, Anthony G and Krieger, Linda Hamilton},
+  journal   = {California law review},
+  title     = {Implicit bias: Scientific foundations},
+  year      = {2006},
+  number    = {4},
+  pages     = {945--967},
+  volume    = {94},
+  publisher = {JSTOR},
+}
+
+@Article{karpinski2001attitudes,
+  author    = {Karpinski, Andrew and Hilton, James L},
+  journal   = {Journal of personality and social psychology},
+  title     = {Attitudes and the implicit association test.},
+  year      = {2001},
+  number    = {5},
+  pages     = {774},
+  volume    = {81},
+  publisher = {American Psychological Association},
+}
+
+@Article{park2007implicit,
+  author    = {Park, Jaihyun and Felix, Karla and Lee, Grace},
+  journal   = {Basic and Applied Social Psychology},
+  title     = {Implicit attitudes toward Arab-Muslims and the moderating effects of social information},
+  year      = {2007},
+  number    = {1},
+  pages     = {35--45},
+  volume    = {29},
+  publisher = {Taylor \& Francis},
+}
+
+@InProceedings{zhang2018mitigating,
+  author    = {Zhang, Brian Hu and Lemoine, Blake and Mitchell, Margaret},
+  booktitle = {Proceedings of the 2018 AAAI/ACM Conference on AI, Ethics, and Society},
+  title     = {Mitigating unwanted biases with adversarial learning},
+  year      = {2018},
+  pages     = {335--340},
+}
+
+@Misc{anderson2015elpa21,
+  author = {Anderson, David P},
+  title  = {ELPA21 Item Development Process Report},
+  year   = {2015},
+}
+
+@Misc{ielts2023,
+  author  = {{International English Language Testing System}},
+  title   = {Test format: speaking},
+  year    = {2023},
+  url     = {https://www.ielts.org/en-us/for-test-takers/test-format},
+  urlyear = {2023-05-21},
+}
+
+@Article{johnson2019effects,
+  author    = {Johnson, Angela},
+  journal   = {AERA Open},
+  title     = {The effects of English learner classification on high school graduation and college attendance},
+  year      = {2019},
+  number    = {2},
+  pages     = {2332858419850801},
+  volume    = {5},
+  publisher = {SAGE Publications Sage CA: Los Angeles, CA},
+}
+
+@Misc{pearson2019versant,
+  author = {{Pearson Education, Inc.}},
+  title  = {Versant English Test: Test description and validation summary},
+  year   = {2019},
+}
+
+@Misc{johnston2019using,
+  author = {Marlene Johnston and Gabriela Finn and Jonathan Wolfe and Masa Suzuki and Hiro Fukuhara},
+  title  = {Using an Integrated Approach to Improve the Development and Scoring of Technology-based Speaking Tests},
+  year   = {2019},
+}
+
+@Article{chen2018automated,
+  author    = {Chen, Lei and Zechner, Klaus and Yoon, Su-Youn and Evanini, Keelan and Wang, Xinhao and Loukina, Anastassia and Tao, Jidong and Davis, Lawrence and Lee, Chong Min and Ma, Min and others},
+  journal   = {ETS Research Report Series},
+  title     = {Automated scoring of nonnative speech using the speechrater sm v. 5.0 engine},
+  year      = {2018},
+  number    = {1},
+  pages     = {1--31},
+  volume    = {2018},
+  publisher = {Wiley Online Library},
+}
+
+@InCollection{zhang2019assessing,
+  author    = {Zhang, Mo and Yao, Lili and Haberman, Shelby J and Dorans, Neil J},
+  booktitle = {Automated speaking assessment},
+  publisher = {Routledge},
+  title     = {Assessing Scoring Accuracy and Assessment Accuracy for Spoken Responses: Using Human and Machine Scores},
+  year      = {2019},
+  pages     = {32--58},
+}
+
+@Article{godfrey1997switchboard,
+  author  = {Godfrey, John J and Holliman, Edward},
+  journal = {Linguistic Data Consortium, Philadelphia},
+  title   = {Switchboard-1 Release 2},
+  year    = {1997},
+  pages   = {927},
+  volume  = {926},
+}
+
+@InProceedings{tao2016exploring,
+  author       = {Tao, Jidong and Ghaffarzadegan, Shabnam and Chen, Lei and Zechner, Klaus},
+  booktitle    = {2016 IEEE International conference on acoustics, speech and signal processing (ICASSP)},
+  title        = {Exploring deep learning architectures for automatically grading non-native spontaneous speech},
+  year         = {2016},
+  organization = {IEEE},
+  pages        = {6140--6144},
+}
+
+@InProceedings{cheng2014automatic,
+  author    = {Cheng, Jian and D’Antilio, Yuan Zhao and Chen, Xin and Bernstein, Jared},
+  booktitle = {Proceedings of the ninth workshop on innovative use of NLP for building educational applications},
+  title     = {Automatic assessment of the speech of young English learners},
+  year      = {2014},
+  pages     = {12--21},
+}
+
+@Article{xiong2016achieving,
+  author  = {Xiong, Wayne and Droppo, Jasha and Huang, Xuedong and Seide, Frank and Seltzer, Mike and Stolcke, Andreas and Yu, Dong and Zweig, Geoffrey},
+  journal = {arXiv preprint arXiv:1610.05256},
+  title   = {Achieving human parity in conversational speech recognition},
+  year    = {2016},
+}
+
+@InCollection{yoon2019features,
+  author    = {Yoon, Su-Youn and Lu, Xiaofei and Zechner, Klaus},
+  booktitle = {Automated Speaking Assessment},
+  publisher = {Routledge},
+  title     = {Features measuring vocabulary and grammar},
+  year      = {2019},
+  pages     = {123--137},
+}
+
+@Article{brown2005examination,
+  author    = {Brown, Annie and Iwashita, Noriko and McNamara, Tim},
+  journal   = {ETS Research Report Series},
+  title     = {An examination of rater orientations and test-taker performance on English-for-academic-purposes speaking tasks},
+  year      = {2005},
+  number    = {1},
+  pages     = {i--157},
+  volume    = {2005},
+  publisher = {Wiley Online Library},
+}
+
+@InCollection{hsieh2019features,
+  author    = {Hsieh, Ching-Ni and Zechner, Klaus and Xi, Xiaoming},
+  booktitle = {Automated Speaking Assessment},
+  publisher = {Routledge},
+  title     = {Features measuring fluency and pronunciation},
+  year      = {2019},
+  pages     = {101--122},
+}
+
+@InCollection{loukina2019scoring,
+  author    = {Loukina, Anastassia and Yoon, Su-Youn},
+  booktitle = {Automated Speaking Assessment},
+  publisher = {Routledge},
+  title     = {Scoring and filtering models for automated speech scoring},
+  year      = {2019},
+  pages     = {75--98},
+}
+
+@InCollection{qian2019automatic,
+  author    = {Qian, Yao and Lange, Patrick and Evanini, Keelan},
+  booktitle = {Automated Speaking Assessment},
+  publisher = {Routledge},
+  title     = {Automatic speech recognition for automated speech scoring},
+  year      = {2019},
+  pages     = {61--74},
+}
+
+@InProceedings{chen2018end,
+  author       = {Chen, Lei and Tao, Jidong and Ghaffarzadegan, Shabnam and Qian, Yao},
+  booktitle    = {2018 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+  title        = {End-to-end neural network based automated speech scoring},
+  year         = {2018},
+  organization = {IEEE},
+  pages        = {6234--6238},
+}
+
+@InCollection{zechner2019summary,
+  author    = {Zechner, Klaus},
+  booktitle = {Automated speaking assessment},
+  publisher = {Routledge},
+  title     = {Summary and outlook on automated speech scoring},
+  year      = {2019},
+  pages     = {192--204},
+}
+
+@InProceedings{loukina2015feature,
+  author    = {Loukina, Anastassia and Zechner, Klaus and Chen, Lei and Heilman, Michael},
+  booktitle = {Proceedings of the Tenth Workshop on Innovative Use of NLP for Building Educational Applications},
+  title     = {Feature selection for automated speech scoring},
+  year      = {2015},
+  pages     = {12--19},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
