Finished first draft for Mike

--- a/20230507_dissertation.bib
+++ b/20230507_dissertation.bib
@@ -196,17 +196,6 @@
   pages   = {261--287},
 }
 
-@Article{koenecke2020racial,
-  author    = {Koenecke, Allison and Nam, Andrew and Lake, Emily and Nudell, Joe and Quartey, Minnie and Mengesha, Zion and Toups, Connor and Rickford, John R and Jurafsky, Dan and Goel, Sharad},
-  journal   = {Proceedings of the National Academy of Sciences},
-  title     = {Racial disparities in automated speech recognition},
-  year      = {2020},
-  number    = {14},
-  pages     = {7684--7689},
-  volume    = {117},
-  publisher = {National Acad Sciences},
-}
-
 @InProceedings{zechner2009,
   author    = {Zechner, Klaus},
   booktitle = {International Workshop on Speech and Language Technology in Education},
@@ -398,7 +387,7 @@
   shorttitle = {Pytorch},
 }
 
-@Report{python_software_foundation_python_2022,
+@Report{python2022,
   author  = {{Python Software Foundation}},
   title   = {The Python Language Reference},
   url     = {https://docs.python.org/3.8/reference/},
@@ -684,6 +673,428 @@
   title     = {Feature selection for automated speech scoring},
   year      = {2015},
   pages     = {12--19},
+}
+
+@Article{koenecke2020,
+  author  = {Allison Koenecke and Andrew Nam and Emily Lake and Joe Nudell and Minnie Quartey and Zion Mengesha and Connor Toups and John R. Rickford and Dan Jurafsky and Sharad Goel},
+  journal = {Proceedings of the National Academy of Sciences},
+  title   = {Racial disparities in automated speech recognition},
+  year    = {2020},
+  number  = {14},
+  pages   = {7684-7689},
+  volume  = {117},
+  doi     = {/10.1073/pnas.1915768117},
+  file    = {:/home/alexander/current/mbela/lit/bias/bias_in_AI/Koenecke et al. (2020) racial disparities in ASR.pdf:PDF},
+}
+
+@InProceedings{tatman2017a,
+  author    = {Rachael Tatman},
+  booktitle = {Proceedings of the First Workshop on Ethics in Natural Language Processing},
+  title     = {Gender and Dialect Bias in YouTube's Automatic Captions},
+  year      = {2017},
+  pages     = {53-59},
+  publisher = {Association for Computational Linguistics},
+  file      = {:/home/alexander/current/mbela/lit/bias/bias_in_AI/Tatman (2017) gender and dialect bias in youtube captions.pdf:PDF},
+}
+
+@InProceedings{tatman2017b,
+  author       = {Rachael Tatman and Conner Kasten},
+  booktitle    = {Special Session: Acoustic Manifestations of Social Characteristics},
+  title        = {Effects of Talker Dialect, Gender and Race on Accuracy of Bing Speech and YouTube Automatic Captions},
+  year         = {2017},
+  organization = {International Speech Communication Assocation},
+  pages        = {934-938},
+  publisher    = {INTERSPEECH},
+  doi          = {.org/10.21437/Interspeech.2017-1746},
+  file         = {:/home/alexander/current/mbela/lit/bias/bias_in_AI/Tatman & Kasten (2017) gender and race accuracy.pdf:PDF},
+}
+
+@Article{reilly2019gender,
+  author    = {Reilly, David and Neumann, David L and Andrews, Glenda},
+  journal   = {American Psychologist},
+  title     = {Gender differences in reading and writing achievement: Evidence from the National Assessment of Educational Progress (NAEP).},
+  year      = {2019},
+  number    = {4},
+  pages     = {445},
+  volume    = {74},
+  publisher = {American Psychological Association},
+}
+
+@Article{kaushanskaya2013gender,
+  author    = {Kaushanskaya, Margarita and Gross, Megan and Buac, Milijana},
+  journal   = {Learning and Individual Differences},
+  title     = {Gender differences in child word learning},
+  year      = {2013},
+  pages     = {82--89},
+  volume    = {27},
+  publisher = {Elsevier},
+}
+
+@Article{dodd2003phonological,
+  author    = {Dodd, Barbara and Holm, Alison and Hua, Zhu and Crosbie, Sharon},
+  journal   = {Clinical Linguistics \& Phonetics},
+  title     = {Phonological development: a normative study of British English-speaking children},
+  year      = {2003},
+  number    = {8},
+  pages     = {617--643},
+  volume    = {17},
+  publisher = {Taylor \& Francis},
+}
+
+@Article{wucherer2018language,
+  author    = {Wucherer, Barbara Verena and Reiterer, Susanne Maria},
+  journal   = {International Journal of Bilingual Education and Bilingualism},
+  title     = {Language is a girlie thing, isn't it? A psycholinguistic exploration of the L2 gender gap},
+  year      = {2018},
+  number    = {1},
+  pages     = {118--134},
+  volume    = {21},
+  publisher = {Taylor \& Francis},
+}
+
+@Book{brown2000principles,
+  author    = {Brown, H Douglas and others},
+  publisher = {Longman New York},
+  title     = {Principles of language learning and teaching},
+  year      = {2000},
+  volume    = {4},
+}
+
+@Article{lesniewska2018first,
+  author    = {Le{\'s}niewska, Justyna and Pichette, Fran{\c{c}}ois and B{\'e}land, S{\'e}bastien},
+  journal   = {Canadian Modern Language Review},
+  title     = {First language test bias? Comparing French-speaking and Polish-speaking participants’ performance on the Peabody picture vocabulary test},
+  year      = {2018},
+  number    = {1},
+  pages     = {27--52},
+  volume    = {74},
+  publisher = {University of Toronto Press},
+}
+
+@Article{sloane2021college,
+  author  = {Sloane, Carolyn M and Hurst, Erik G and Black, Dan A},
+  journal = {Journal of Economic Perspectives},
+  title   = {College majors, occupations, and the gender wage gap},
+  year    = {2021},
+  number  = {4},
+  pages   = {223--48},
+  volume  = {35},
+}
+
+@TechReport{dichristofano2023,
+  author   = {Dichristofano, Alex and Shuster, Henry and Chandra, Shefali},
+  title    = {Global Performance Disparities Between English-Language Accents in Automatic Speech Recognition},
+  year     = {2023},
+  number   = {ASR},
+  abstract = {Past research has identified discriminatory automatic speech recognition (ASR) performance as a function of the racial group and nationality of the speaker. In this paper, we expand the discussion beyond bias as a function of the individual national origin of the speaker to look for bias as a function of the geopolitical orientation of their nation of origin. We audit some of the most popular English language ASR services using a large and global data set of speech from The Speech Accent Archive, which includes over 2,700 speakers of English born in 171 different countries. We show that, even when controlling for multiple linguistic covariates, ASR service performance has a statistically significant relationship to the political alignment of the speaker's birth country with respect to the United States' geopolitical power. This holds for all ASR services tested. We discuss this bias in the context of the historical use of language to maintain global and political power.},
+  file     = {:/home/alexander/current/mbela/20221117_WER/lit/bias/Dichristofano et al. (2023) L2 bias in ASR.pdf:PDF},
+}
+
+@InCollection{suresh2021framework,
+  author    = {Suresh, Harini and Guttag, John},
+  booktitle = {Equity and access in algorithms, mechanisms, and optimization},
+  title     = {A framework for understanding sources of harm throughout the machine learning life cycle},
+  year      = {2021},
+  pages     = {1--9},
+}
+
+@Article{huang2016exploring,
+  author    = {Huang, Xiaoting and Wilson, Mark and Wang, Lei},
+  journal   = {Educational Psychology},
+  title     = {Exploring plausible causes of differential item functioning in the PISA science assessment: language, curriculum or culture},
+  year      = {2016},
+  number    = {2},
+  pages     = {378--390},
+  volume    = {36},
+  publisher = {Taylor \& Francis},
+}
+
+@Article{santelices2010unfair,
+  author    = {Santelices, Maria Veronica and Wilson, Mark},
+  journal   = {Harvard Educational Review},
+  title     = {Unfair treatment? The case of Freedle, the SAT, and the standardization approach to differential item functioning},
+  year      = {2010},
+  number    = {1},
+  pages     = {106--134},
+  volume    = {80},
+  publisher = {Harvard Education Publishing Group},
+}
+
+@Article{dorans2004examining,
+  author    = {Dorans, Neil J and Zeller, Karin},
+  journal   = {ETS Research Report Series},
+  title     = {Examining Freedle's Claims About Bias and His Proposed Solution: Dated Data, Inappropriate Measurement, and Incorrect and Unfair Scoring},
+  year      = {2004},
+  number    = {2},
+  pages     = {1--33},
+  volume    = {2004},
+  publisher = {Wiley Online Library},
+}
+
+@Book{jurafskyspeech,
+  author  = {Jurafsky, Daniel and Martin, James H},
+  title   = {Speech and Language Processing: An Introduction to Natural Language Processing, Computational Linguistics, and Speech Recognition},
+  year    = {2023},
+  edition = {3rd},
+}
+
+@Book{goodfellow2016deep,
+  author    = {Goodfellow, Ian and Bengio, Yoshua and Courville, Aaron},
+  publisher = {MIT press},
+  title     = {Deep learning},
+  year      = {2016},
+}
+
+@InProceedings{gretter2019automatic,
+  author       = {Gretter, Roberto and Matassoni, Marco and Allgaier, Katharina and Tchistiakova, Svetlana and Falavigna, Daniele},
+  booktitle    = {ICASSP 2019-2019 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+  title        = {Automatic assessment of spoken language proficiency of non-native children},
+  year         = {2019},
+  organization = {IEEE},
+  pages        = {7435--7439},
+}
+
+@Article{galvez2021people,
+  author  = {Galvez, Daniel and Diamos, Greg and Ciro, Juan and Cer{\'o}n, Juan Felipe and Achorn, Keith and Gopi, Anjali and Kanter, David and Lam, Maximilian and Mazumder, Mark and Reddi, Vijay Janapa},
+  journal = {arXiv preprint arXiv:2111.09344},
+  title   = {The People's Speech: A Large-Scale Diverse English Speech Recognition Dataset for Commercial Usage},
+  year    = {2021},
+}
+
+@Misc{iderhoff2023,
+  author  = {Nicholas Iderhoff},
+  title   = {nlp-datasets},
+  year    = {2023},
+  url     = {https://github.com/niderhoff/nlp-datasets},
+  urlyear = {2023-05-23},
+}
+
+@Article{liu2019roberta,
+  author  = {Liu, Yinhan and Ott, Myle and Goyal, Naman and Du, Jingfei and Joshi, Mandar and Chen, Danqi and Levy, Omer and Lewis, Mike and Zettlemoyer, Luke and Stoyanov, Veselin},
+  journal = {arXiv preprint arXiv:1907.11692},
+  title   = {Roberta: A robustly optimized bert pretraining approach},
+  year    = {2019},
+}
+
+@Article{wang2018glue,
+  author  = {Wang, Alex and Singh, Amanpreet and Michael, Julian and Hill, Felix and Levy, Omer and Bowman, Samuel R},
+  journal = {arXiv preprint arXiv:1804.07461},
+  title   = {GLUE: A multi-task benchmark and analysis platform for natural language understanding},
+  year    = {2018},
+}
+
+@Article{hooker2020characterising,
+  author  = {Hooker, Sara and Moorosi, Nyalleng and Clark, Gregory and Bengio, Samy and Denton, Emily},
+  journal = {arXiv preprint arXiv:2010.03058},
+  title   = {Characterising bias in compressed models},
+  year    = {2020},
+}
+
+@Article{zhao2017men,
+  author  = {Zhao, Jieyu and Wang, Tianlu and Yatskar, Mark and Ordonez, Vicente and Chang, Kai-Wei},
+  journal = {arXiv preprint arXiv:1707.09457},
+  title   = {Men also like shopping: Reducing gender bias amplification using corpus-level constraints},
+  year    = {2017},
+}
+
+@InProceedings{hutiri2022,
+  author    = {Wiebke Toussaint Hutiri and Aaron Yi Ding},
+  booktitle = {2022 {ACM} Conference on Fairness, Accountability, and Transparency},
+  title     = {Bias in Automated Speaker Recognition},
+  year      = {2022},
+  month     = {jun},
+  publisher = {{ACM}},
+  abstract  = {Automated speaker recognition uses data processing to identify speakers by their voice. Today, automated speaker recognition is deployed on billions of smart devices and in services such as call centres. Despite their wide-scale deployment and known sources of bias in related domains like face recognition and natural language processing, bias in automated speaker recognition has not been studied systematically. We present an in-depth empirical and analytical study of bias in the machine learning development workflow of speaker verification, a voice biometric and core task in automated speaker recognition. Drawing on an established framework for understanding sources of harm in machine learning, we show that bias exists at every development stage in the well-known VoxCeleb Speaker Recognition Challenge, including data generation, model building, and implementation. Most affected are female speakers and non-US nationalities, who experience significant performance degradation. Leveraging the insights from our findings, we make practical recommendations for mitigating bias in automated speaker recognition, and outline future research directions. CCS CONCEPTS • General and reference → Evaluation; • Security and privacy → Biometrics; • Computing methodologies → Speech recognition; Machine learning.},
+  doi       = {10.1145/3531146.3533089},
+  file      = {:/home/alexander/current/mbela/20221117_WER/lit/bias/Hutiri & Ding (2022) bias in automated speaker recognition.pdf:PDF},
+  keywords  = {speaker recognition, speaker verification, bias, fairness, audit, evaluation},
+}
+
+@Book{zechner2019automated,
+  author    = {Zechner, Klaus and Evanini, Keelan},
+  publisher = {Routledge},
+  title     = {Automated speaking assessment: Using language technologies to score spontaneous speech},
+  year      = {2019},
+}
+
+@Article{johnson2020,
+  author    = {Angela Johnson},
+  journal   = {Educational Evaluation and Policy Analysis},
+  title     = {The Impact of English Learner Reclassification on High School Reading and Academic Progress},
+  year      = {2020},
+  month     = {sep},
+  number    = {1},
+  pages     = {46--65},
+  volume    = {42},
+  abstract  = {This study estimates the causal impact of 8th grade English learner (EL) reclassification on high school English language arts (ELA) standardized test scores, SAT (Scholastic Aptitude Test) reading, and on-track to graduate status. I apply a regression discontinuity design to rich administrative data from a large district in California. The estimated effects of eighth grade reclassification on 9th, 10th, and 11th grade ELA test scores were statistically insignificant, and I can rule out negative effects less than −0.17 SDs and positive effects larger than 0.09 SDs. The negative effect on SAT reading was fairly large, with a confidence interval of −0.27 SDs to 0.05 SDs. Estimates for on-track status in 10th and 11th grades were positive but imprecise.},
+  doi       = {10.3102/0162373719877197},
+  file      = {:/home/alexander/current/mbela/20221117_WER/lit/testing/Johnson (2020) Impact of EL reclassification on academic progress.pdf:PDF},
+  keywords  = {equity, immigration/immigrants, policy, quasiexperimental analysis, regression discontinuity},
+  publisher = {American Educational Research Association ({AERA})},
+}
+
+@InProceedings{zhao2018l2,
+  author    = {Zhao, Guanlong and Sonsaat, Sinem and Silpachai, Alif and Lucic, Ivana and Chukharev-Hudilainen, Evgeny and Levis, John and Gutierrez-Osuna, Ricardo},
+  booktitle = {Interspeech 2018},
+  title     = {L2-ARCTIC: A Non-Native English Speech Corpus},
+  year      = {2018},
+  abstract  = {In this paper, we introduce L2-ARCTIC, a speech corpus of non-native English that is intended for research in voice conversion, accent conversion, and mispronunciation detection. This initial release includes recordings from ten non-native speakers of English whose first languages (L1s) are Hindi, Korean, Mandarin, Spanish, and Arabic, each L1 containing recordings from one male and one female speaker. Each speaker recorded approximately one hour of read speech from the Carnegie Mellon University ARCTIC prompts, from which we generated orthographic and forced-aligned phonetic transcriptions. In addition, we manually annotated 150 utterances per speaker to identify three types of mispronunciation errors: substitutions, deletions, and additions, making it a valuable resource not only for research in voice conversion and accent conversion but also in computer-assisted pronunciation training. The corpus is publicly accessible at https://psi.engr.tamu.edu/l2-arctic-corpus/.},
+  file      = {:/home/alexander/current/mbela/20221117_WER/lit/L2-ARCTIC/Zhao et al. (2018) L2-ARCTIC.pdf:PDF},
+  keywords  = {speech corpus, voice conversion, accent conversion, mispronunciation detection},
+}
+
+@InProceedings{markl2022,
+  author    = {Nina Markl},
+  booktitle = {2022 {ACM} Conference on Fairness, Accountability, and Transparency},
+  title     = {Language variation and algorithmic bias: understanding algorithmic bias in British English automatic speech recognition},
+  year      = {2022},
+  month     = {jun},
+  number    = {disentangle},
+  publisher = {{ACM}},
+  abstract  = {All language is characterised by variation which language users employ to construct complex social identities and express social meaning. Like other machine learning technologies, speech and language technologies (re)produce structural oppression when they perform worse for marginalised language communities. Using knowledge and theories from sociolinguistics, I explore why commercial automatic speech recognition systems and other language technologies perform significantly worse for already marginalised populations, such as second-language speakers and speakers of stigmatised varieties of English in the British Isles. Situating language technologies within the broader scholarship around algorithmic bias, consider the allocative and representational harms they can cause even (and perhaps especially) in systems which do not exhibit predictive bias, narrowly defined as differential performance between groups. This raises the question whether addressing or "fixing" this "bias" is actually always equivalent to mitigating the harms algorithmic systems can cause, in particular to marginalised communities. CCS CONCEPTS • Computing methodologies → Natural language processing; Speech recognition.},
+  doi       = {10.1145/3531146.3533117},
+  file      = {:/home/alexander/current/mbela/20221117_WER/lit/bias/Markl (2022) bias in non-standard british accents.pdf:PDF},
+  keywords  = {algorithmic bias, speech and language technologies, language variation, speech recognition},
+}
+
+@InProceedings{meyer2020,
+  author    = {Meyer, Josh and Rauchenstein, Lynn and Eisenberg, Joshua and Howell, Nicholas},
+  booktitle = {Proceedings of the 12th Conference on Language Resources and Evaluation (LREC 2020), pages 6462–6468 Marseille, 11–16 May 2020},
+  title     = {Artie Bias Corpus: An Open Dataset for Detecting Demographic Bias in Speech Applications},
+  year      = {2020},
+  abstract  = {We describe the creation of the Artie Bias Corpus, an English dataset of expertvalidated <audio, transcript> pairs with demographic tags for {age, gender, accent}. We also release open software which may be used with the Artie Bias Corpus to detect demographic bias in Automatic Speech Recognition systems and can be extended to other speech technologies. The Artie Bias Corpus is a curated subset of the Mozilla Common Voice corpus, which we release under a Creative Commons CC0 license-the most open and permissive license for data. This article contains information on the criteria used to select and annotate the Artie Bias Corpus in addition to experiments in which we detect and attempt to mitigate bias in endtoend speech recognition models. We observe a significant accent bias in our baseline DeepSpeech model, with more accurate transcriptions of US English compared to Indian English. We do not, however, find evidence for a significant gender bias. We then show significant improvements on individual demographic groups from finetuning.},
+  file      = {:/home/alexander/current/mbela/20221117_WER/lit/bias/Meyer et al. (2020) Artie bias corpus.pdf:PDF},
+  keywords  = {speech corpus, automatic speech recognition, demographic bias, bias detection},
+}
+
+@InProceedings{zuluaga2023,
+  author    = {Zuluaga-Gomez, Juan and Prasad, Amrutha and Nigmatulina, Iuliia and Sarfjoo, Seyyed and Motlicek, Petr and Kleinert, Matthias and Helmke, Hartmut and Ohneiser, Oliver and Zhan, Qingran},
+  title     = {How does pre-trained Wav2Vec 2.0 perform on domain-shifted ASR? An extensive benchmark on air traffic control communications},
+  year      = {2023},
+  publisher = {IEEE},
+  abstract  = {Recent work on self-supervised pre-training focus on leveraging large-scale unlabeled speech data to build robust end-to-end (E2E) acoustic models (AM) that can be later fine-tuned on downstream tasks e.g., automatic speech recognition (ASR). Yet, few works investigated the impact on performance when the data properties substantially differ between the pre-training and fine-tuning phases, termed domain shift. We target this scenario by analyzing the robustness of Wav2Vec 2.0 and XLS-R models on downstream ASR for a completely unseen domain, air traffic control (ATC) communications. We benchmark these two models on several open-source and challenging ATC databases with signal-to-noise ratio between 5 to 20 dB. Relative word error rate (WER) reductions between 20% to 40% are obtained in comparison to hybrid-based ASR baselines by only fine-tuning E2E acoustic models with a smaller fraction of labeled data. We analyze WERs on the low-resource scenario and gender bias carried by one ATC dataset.},
+  file      = {:/home/alexander/current/mbela/20221117_WER/lit/bias/Zuluaga-Gomez (2023) wav2vec air traffic control.pdf:PDF},
+  keywords  = {Automatic speech recognition, Wav2Vec 2.0, self-supervised pre-training, air traffic control communications},
+}
+
+@Book{wilcox2012,
+  author    = {Wilcox, Rand R},
+  publisher = {Academic press},
+  title     = {Introduction to robust estimation and hypothesis testing},
+  year      = {2012},
+}
+
+@Article{elwert2014,
+  author    = {Elwert, Felix and Winship, Christopher},
+  journal   = {Annual review of sociology},
+  title     = {Endogenous selection bias: The problem of conditioning on a collider variable},
+  year      = {2014},
+  pages     = {31--53},
+  volume    = {40},
+  publisher = {Annual Reviews},
+}
+
+@Manual{r2020,
+  title        = {R: A Language and Environment for Statistical Computing},
+  address      = {Vienna, Austria},
+  author       = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  year         = {2020},
+  url          = {https://www.R-project.org/},
+}
+
+@Article{tibshirani1993,
+  author    = {Tibshirani, Robert J and Efron, Bradley},
+  journal   = {Monographs on statistics and applied probability},
+  title     = {An introduction to the bootstrap},
+  year      = {1993},
+  number    = {1},
+  volume    = {57},
+  publisher = {Chapman and Hall Boca Raton},
+}
+
+@Article{elazar2018adversarial,
+  author  = {Elazar, Yanai and Goldberg, Yoav},
+  journal = {arXiv preprint arXiv:1808.06640},
+  title   = {Adversarial removal of demographic attributes from text data},
+  year    = {2018},
+}
+
+@InProceedings{wang2019balanced,
+  author    = {Wang, Tianlu and Zhao, Jieyu and Yatskar, Mark and Chang, Kai-Wei and Ordonez, Vicente},
+  booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision},
+  title     = {Balanced datasets are not enough: Estimating and mitigating gender bias in deep image representations},
+  year      = {2019},
+  pages     = {5310--5319},
+}
+
+@InProceedings{yatskar2016situation,
+  author    = {Yatskar, Mark and Zettlemoyer, Luke and Farhadi, Ali},
+  booktitle = {Proceedings of the IEEE conference on computer vision and pattern recognition},
+  title     = {Situation recognition: Visual semantic role labeling for image understanding},
+  year      = {2016},
+  pages     = {5534--5542},
+}
+
+@Book{fourdrinier2018shrinkage,
+  author    = {Fourdrinier, Dominique and Strawderman, William E and Wells, Martin T},
+  publisher = {Springer},
+  title     = {Shrinkage estimation},
+  year      = {2018},
+}
+
+@Article{samejima1997graded,
+  author    = {Samejima, Fumiko},
+  journal   = {Handbook of modern item response theory},
+  title     = {Graded response model},
+  year      = {1997},
+  pages     = {85--100},
+  publisher = {Springer},
+}
+
+@Article{cai2012flexmirt,
+  author  = {Cai, Li},
+  journal = {Seattle, WA: Vector Psychometric Group, LLC},
+  title   = {flexMIRT: Flexible multilevel item factor analysis and test scoring [Computer software]},
+  year    = {2012},
+}
+
+@Article{ormerod2022mapping,
+  author    = {Ormerod, Christopher Michael},
+  journal   = {Psychological Test and Assessment Modeling},
+  title     = {Mapping between hidden states and features to validate automated essay scoring using DeBERTa models},
+  year      = {2022},
+  number    = {4},
+  pages     = {495--526},
+  volume    = {64},
+  publisher = {PABST Science Publishers},
+}
+
+@Article{hansen2014methodology,
+  author    = {Hansen, Mark and Cai, Li and Stucky, Brian D and Tucker, Joan S and Shadel, William G and Edelen, Maria Orlando},
+  journal   = {nicotine \& tobacco research},
+  title     = {Methodology for developing and evaluating the PROMIS{\textregistered} smoking item banks},
+  year      = {2014},
+  number    = {Suppl\_3},
+  pages     = {S175--S189},
+  volume    = {16},
+  publisher = {Oxford University Press UK},
+}
+
+@Article{kominek2003,
+  author    = {Kominek, John and Alan W Black},
+  journal   = {Carnegie Mellon University Language Technologies Institute},
+  title     = {CMU ARCTIC Databases for Speech Synthesis},
+  year      = {2003},
+  publisher = {Carnegie Mellon University},
+}
+
+@InProceedings{kwako2022using,
+  author    = {Kwako, Alexander and Wan, Yixin and Zhao, Jieyu and Chang, Kai-Wei and Cai, Li and Hansen, Mark},
+  booktitle = {Proceedings of the 17th Workshop on Innovative Use of NLP for Building Educational Applications (BEA 2022)},
+  title     = {Using Item Response Theory to Measure Gender and Racial Bias of a BERT-based Automated English Speech Assessment System},
+  year      = {2022},
+  pages     = {1--7},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
